--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,23 @@
+:root {
+  --main-bg-color: #c8ddee;
+  --secondary-bg-color: #7a8b99;
+
+  /* OPTION
+   --main-bg-color: #443235;
+   --secondary-bg-color: #8f7d7f; */
+  /* OPTION
+   --main-bg-color: #c8ddee;
+   --secondary-bg-color: #7a8b99;
+   */
+}
+
 body {
   position: relative;
   font-family: 'Raleway', sans-serif;
   font-size: calc(16px + (18 - 14) * ((100vw - 300px) / (1600 - 100)));
   font-weight: 100;
   color: #ffffff;
-  background: #262938;
+  background: var(--main-bg-color);
   margin: 0;
   padding: 0;
   height: 100vh;
