--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,12 @@
 :root {
-  --main-bg-color: #c8ddee;
-  --secondary-bg-color: #7a8b99;
+  /* --main-bg-color: #c8ddee;
+  --secondary-bg-color: #7a8b99; */
 
-  /* OPTION
-   --main-bg-color: #443235;
-   --secondary-bg-color: #8f7d7f; */
-  /* OPTION
+
+  --main-bg-color: #443235;
+  --secondary-bg-color: #8f7d7f;
+  --main-font: "Montserrat", sans-serif;
+  /* 
    --main-bg-color: #c8ddee;
    --secondary-bg-color: #7a8b99;
    */
@@ -13,7 +14,8 @@
 
 body {
   position: relative;
-  font-family: 'Raleway', sans-serif;
+  font-family: var(--main-font),
+    sans-serif;
   font-size: calc(16px + (18 - 14) * ((100vw - 300px) / (1600 - 100)));
   font-weight: 100;
   color: #ffffff;
@@ -27,7 +29,8 @@ body {
 h1,
 h2,
 h3 {
-  font-family: 'Volkhov', serif;
+  font-family: '--main-font',
+    sans-serif;
   line-height: 1.2;
   font-weight: 100;
 }
