--- a/src/components/contactForm/ContactForm.css
+++ b/src/components/contactForm/ContactForm.css
@@ -2,7 +2,7 @@
   padding-left: 5px;
   font-family: var(--main-font);
   font-size: 14px;
-  margin: 1rem;
+  margin: 2rem auto 0rem 1rem;
   color: var(--secondary-bg-color);
   top: -10px;
 }
@@ -11,7 +11,7 @@
 
 .container_custom {
   font-family: var(--main-font);
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   display: block;
   background: var(--secondary-bg-color);
@@ -20,6 +20,8 @@
 .group_custom {
   position: relative;
   margin-bottom: 0;
+  padding: 1rem;
+  opacity: 0.9;
 }
 
 input {
