--- a/src/components/contactForm/ContactForm.css
+++ b/src/components/contactForm/ContactForm.css
@@ -1,343 +1,216 @@
-.custom_label {
-  padding-left: 5px;
-  font-family: var(--main-font);
-  font-size: 14px;
-  margin: 2rem auto 0rem 1rem;
-  color: var(--secondary-bg-color);
-  top: -10px;
-}
-
-/* ABSCHLUSS MOBILE FORM starting specific stylings ------------------------------- */
+/*  MOBILE FORM starting specific stylings ------------------------------- */
 
 .container_custom {
-  font-family: var(--main-font);
   width: 90%;
-  margin: 0 auto;
-  display: block;
-  background: var(--secondary-bg-color);
-}
-
-.group_custom {
-  position: relative;
-  margin-bottom: 0;
-  padding: 1rem;
-  opacity: 0.9;
-}
-
-input {
-  font-family: var(--main-font);
-  font-size: 18px;
-  padding: 20px 10px 4px 25px;
-  display: block;
-  width: 100%;
-  height: 40px;
-  border: none;
-  border-bottom: 0.5px solid #757575;
-}
-
-textarea {
-  font-family: var(--main-font);
-  font-size: 18px;
-  padding: 20px 10px 4px 25px;
-  display: block;
-  width: 100%;
-  height: 300px;
-  border: none;
-  border-bottom: 0.5px solid #757575;
-}
-
-input:focus {
-  outline: none;
-}
-
-select {
-  font-family: var(--main-font);
-  font-size: 18px;
-  padding: 20px 10px 0px 5px;
-  display: block;
-  width: 100%;
-  height: 40px;
-  border: none;
-  border-bottom: 0.5px solid #757575;
-}
-
-select:focus {
-  outline: none;
-}
-
-/* LABEL ======================================= */
-label {
-  color: #696969;
-  font-family: var(--main-font);
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 20px;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-/* active state */
-input~label,
-input~label.custom_label {
-  top: -10px;
-  font-size: 14px;
-  color: var(--secondary-bg-color);
-}
-
-input.error.field~label {
-  top: -10px;
-  font-size: 15px;
-  color: var(--warning-bg-color);
-  background: #ffffff;
-  padding: 0 2px;
-  z-index: 200;
-}
-
-input.error~label {
-  top: -10px;
-  font-size: 15px;
-  color: var(--warning-bg-color);
-  background: #ffffff;
-  padding: 0 2px;
-  z-index: 200;
-}
-
-input:placeholder-shown~label {
-  color: gray;
-  font-size: 18px;
-  top: 15px;
-  background: transparent;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-input.error:placeholder-shown {
-  border: none;
-  border-bottom: 0.5px solid #757575;
-}
-
-input.error {
-  border: 0.5px solid var(--warning-bg-color);
-}
-
-input.error.field {
-  margin-bottom: 0;
-  font-size: 1rem;
-  border: 1px solid var(--warning-bg-color);
-}
-
-/* BOTTOM BARS ================================= */
-.bar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.bar:before,
-.bar:after {
-  content: '';
-  height: 2px;
-  width: 0;
-  bottom: 0;
-  position: absolute;
-  background: var(--main-bg-color);
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.bar:before {
-  left: 50%;
-}
-
-.bar:after {
-  right: 50%;
-}
-
-/* active state */
-input:focus~.bar:before,
-input:focus~.bar:after {
-  width: 50%;
-}
-
-/* HIGHLIGHTER ================================== */
-.highlight {
-  position: absolute;
-  height: 60%;
-  width: 100px;
-  top: 25%;
-  left: 0;
-  pointer-events: none;
-  opacity: 0.5;
-}
-
-/* active state */
-input:focus~.highlight {
-  -webkit-animation: inputHighlighter 0.3s ease;
-  -moz-animation: inputHighlighter 0.3s ease;
-  animation: inputHighlighter 0.3s ease;
-}
-
-/* ANIMATIONS ================ */
-@-webkit-keyframes inputHighlighter {
-  from {
-    background: var(--main-bg-color);
-  }
-
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-
-@-moz-keyframes inputHighlighter {
-  from {
-    background: var(--main-bg-color);
-  }
-
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-
-@keyframes inputHighlighter {
-  from {
-    background: var(--main-bg-color);
-  }
-
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  align-items: baseline;
-  width: 40px;
-  height: 16px;
-  margin: 0.3rem 0 0.5rem 0;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: '';
-  height: 12px;
-  width: 12px;
-  left: 1px;
-  bottom: 2px;
+  margin: auto;
+  padding-bottom: 1srem;
   background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input:checked+.slider {
-  background-color: var(--main-bg-color);
-}
-
-input:focus+.slider {
-  box-shadow: 0 0 1px var(--main-bg-color);
-}
-
-input:checked+.slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-.sliderCheckbox {
-  padding-top: 0.5rem;
-}
-
-.btn-less-margin {
-  margin: -2rem 0;
-}
-
-/* BUTTONS STYLE */
-.button {
-  margin-top: 1rem;
-  display: inline-block;
-  padding: .75rem 1.25rem;
-  border-radius: 10rem;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: .15rem;
-  transition: all .3s;
-  position: relative;
-  overflow: hidden;
+  border-radius: 15px;
+  opacity: 0.8;
   z-index: 1;
 }
 
-.button:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
+input,
+label {
+  font-size: 1em;
+  height: 2rem;
+  margin-top: 0rem;
+  padding-top: 3.3rem;
+}
+
+form>ol {
+  list-style: none;
+  padding: 0px;
+}
+
+form>ol>li {
+  position: relative;
+  margin: 1.2em;
+}
+
+input {
+  padding: 0.1em 0em;
+  border: none;
+  border-radius: 0px;
+  border-bottom: 1px solid #555;
+  outline: none;
+  margin: 0px;
+  background: none;
+  outline: none;
+  resize: none;
+  overflow: auto;
   width: 100%;
-  height: 100%;
-  background-color: var(--main-bg-color);
-  border-radius: 10rem;
-  z-index: -2;
+
 }
 
-.button:before {
-  content: '';
+textarea {
+  outline: none;
+  resize: none;
+  width: 100%;
+  overflow: auto;
+  height: 300px;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid black;
+
+
+}
+
+/**** HERE THE MAGIC STARTS *****/
+/* Original label position: top left and small */
+label {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 100%;
-  background-color: var(--secondary-bg-color);
-  transition: all .3s;
-  border-radius: 10rem;
-  z-index: -1;
-}
-
-.button:hover {
+  top: -1em;
+  left: 0.08em;
   color: var(--main-bg-color);
-  font-size: 700;
-  text-decoration: none;
+  z-index: -1;
+  font-size: 0.85em;
+  animation: float-labels 300ms none ease-out;
+  -webkit-animation: float-labels 300ms none ease-out;
+
+  /* There is a bug sometimes pausing the animation. This avoids that.*/
+  animation-play-state: running !important;
+  -webkit-animation-play-state: running !important;
 }
 
-.button:before {
+label#mensaje {
+  top: 16rem;
+  padding-bottom: 2rem;
+}
+
+/* Label highlight effect also for non-JS browsers */
+input:not(.empty):focus+label {
+  color: #0099ff;
+}
+
+/* In JS Browsers the .empty class is assigned to empty inputs -> label is rendered like a placeholder in the input field */
+input.empty+label {
+  top: 0.1em;
+  font-size: 1.5em;
+  animation: none;
+  -webkit-animation: none;
+}
+
+/* The animation is a bit more complex than what is achievable with simple transitions, because I do not want the label to fly over my input. The place-holder label should fade out first and then appear again above the input text */
+@keyframes float-labels {
+
+  0% {
+    opacity: 1;
+    color: #aaa;
+    top: 0.1em;
+    font-size: 1.5em;
+  }
+
+  20% {
+    font-size: 1.5em;
+    opacity: 0;
+  }
+
+  30% {
+    top: 0.1em;
+  }
+
+  50% {
+    opacity: 0;
+    font-size: 0.85em;
+  }
+
+  100% {
+    top: -1em;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes float-labels {
+
+  0% {
+    opacity: 1;
+    color: #aaa;
+    top: 0.1em;
+    font-size: 1.5em;
+  }
+
+  20% {
+    font-size: 1.5em;
+    opacity: 0;
+  }
+
+  30% {
+    top: 0.1em;
+  }
+
+  50% {
+    opacity: 0;
+    font-size: 0.85em;
+  }
+
+  100% {
+    top: -1em;
+    opacity: 1;
+  }
+}
+
+/* SWITCH CHECKBOX START */
+
+.switch {
+  position: relative;
+  display: inline-block;
+}
+
+.switch-input {
+  display: none;
+}
+
+.switch-label {
+  display: block;
+  width: 48px;
+  height: 24px;
+  text-indent: -150%;
+  clip: rect(0 0 0 0);
+  color: transparent;
+  user-select: none;
+}
+
+.switch-label::before,
+.switch-label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+
+.switch-label::before {
   width: 100%;
+  height: 100%;
+  background-color: #dedede;
+  border-radius: 9999em;
+  -webkit-transition: background-color 0.25s ease;
+  transition: background-color 0.25s ease;
+}
+
+.switch-label::after {
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+  -webkit-transition: left 0.25s ease;
+  transition: left 0.25s ease;
+}
+
+.switch-input:checked+.switch-label::before {
+  background-color: #89c12d;
+}
+
+.switch-input:checked+.switch-label::after {
+  left: 24px;
+}
+
+/* SWITCH CHECKBOX END */
+
+.submit {
+  position: absolute;
+  right: 8.5rem;
 }
