--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,3 +65,57 @@ a:hover {
   text-decoration: underline;
   color: var(--white-bg-color);
 }
+
+/* BUTTONS STYLE */
+.button {
+  margin: 3rem;
+  display: inline-block;
+  padding: 11%;
+  border-radius: 2rem;
+  color: white;
+  background-color: var(--main-bg-color);
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  width: auto;
+  height: min-content
+}
+
+.button:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-bg-color);
+  border-radius: 10rem;
+  z-index: -2;
+}
+
+.button:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: var(--secondary-bg-color);
+  transition: all .3s;
+  border-radius: 10rem;
+  z-index: -1;
+}
+
+.button:hover {
+  color: var(--warning-bg-color);
+  font-size: 700;
+  text-decoration: none;
+}
+
+.button:before {
+  width: 100%;
+}
